# doyourthing-og

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  defaults.json  doyourthing
config/: defaults.json
include/: Action.hh  Manager.hh  Section.hh  Spinner.hh  libdyt.hh
package/: doyourthing
package/config/: config.json
package/include/: Colors.hh  Settings.hh
package/src/: action.cc  section.cc
release/: CHANGELOG.txt  DESCRIPTION.txt  DoYourThing.spec
src/: action.cc  colors.cc  libdyt.cc  manager.cc  settings.cc  spinner.cc
src/targets/: doyourthing.cc
website/: package.json  tailwind.config.js
website/pages/: index.tsx
